# sotck_down_load

./: .env  .env.example  .env.template  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  自选股票使用说明.md  项目检查报告.md
.claude/: settings.local.json
cron/: update_daily.sh
data/: SH600000.json  SH600008.json  SH600009.json  SH600010.json  SH600015.json  SH600016.json  SH600018.json  SH600019.json  SH600023.json  SH600025.json  SH600026.json  SH600028.json  SH600029.json  SH600030.json  SH600031.json  SH600036.json  SH600039.json  SH600048.json  SH600050.json  SH600061.json  SH600066.json  SH600085.json  SH600089.json  SH600104.json  SH600111.json  SH600115.json  SH600150.json  SH600160.json  SH600161.json  SH600176.json  SH600183.json  SH600188.json  SH600196.json  SH600219.json  SH600233.json  SH600276.json  SH600299.json  SH600309.json  SH600346.json  SH600352.json  (+236 more)
data/history/: SH600000_history_kline.csv  SH600009_history_kline.csv  SH600010_history_kline.csv  SH600015_history_kline.csv  SH600016_history_kline.csv  SH600018_history_kline.csv  SH600019_history_kline.csv  SH600023_history_kline.csv  SH600025_history_kline.csv  SH600026_history_kline.csv  SH600028_history_kline.csv  SH600029_history_kline.csv  SH600030_history_kline.csv  SH600031_history_kline.csv  SH600036_history_kline.csv  SH600039_history_kline.csv  SH600048_history_kline.csv  (+263 more)
temp/: test_kline.py  test_pysnowball_methods.py  test_return_keys.py
tests/: test_custom_quote_update.py  test_data_saver.py  test_single_download.py
txt/: 股票趋势分析方案多Agent讨论记录.md  股票趋势分析最终方案.md
(+15 files in other folders)
